<?xml version="1.0"?>
<package>
  <name>rospitch</name>
  <version>0.0.1</version>
  <description>Package integrating ROS and Pitch environments.</description>

  <maintainer email="gareth.roberts@manchester.ac.uk">Gareth R</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mavros</build_depend>
  <run_depend>mavros</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>